# 2DO

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  TODO.md  requirements.md
2DOApp/: CMakeLists.txt  main.cpp
2DOApp/include/2DOApp/: app.hpp  term.hpp
2DOApp/src/: app.cpp  term.cpp
2DOCore/: CMakeLists.txt
2DOCore/include/2DOCore/: result.hpp  task.hpp  term.hpp  user.hpp  utils.hpp
2DOCore/src/: task.cpp  term.cpp  user.cpp  utils.cpp
Tests/: CMakeLists.txt  auth_manager_test.cpp  database_test.cpp  result_test.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: database.hpp  result.hpp  type.hpp  util.hpp
Utils/src/: database.cpp  util.cpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  database.cpp  database.hpp  db.cpp  db.hpp  result.hpp  task.cpp  task.hpp  user.cpp  user.hpp  utils.cpp  utils.hpp
src/lib/: CMakeLists.txt  ISerializable.hpp  app.cpp  app.hpp  database.cpp  database.hpp  db.cpp  db.hpp  result.hpp  task.cpp  task.hpp  user.cpp  user.hpp  utils.cpp  utils.hpp
src/main/: CMakeLists.txt  main.cpp
test/: 2docore_test.cpp  CMakeLists.txt  auth_manager_test.cpp  auth_test.cpp  database_test.cpp  db.db3  result_test.cpp  test.cpp  utils_test.cpp
